# ligparam

./: .gitignore  README.md  pyproject.toml  setup.py
ligparam/: Graph.py  __init__.py  config.py  db.py  dialog.py  dialog.ui  helpers.py  main.py
tests/: test_ligparam.py
